Prevent elements from shifting if title field is empty
Also update version number

--- a/styles/main.css
+++ b/styles/main.css
@@ -101,6 +101,7 @@ input[type="checkbox"]:checked::before {
 
 .tb-chart > div:first-child {
     font-size: 3rem;
+    height: 3.625rem;
 }
 
 #tb-title {
